# Iris-2D-Project

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Iris 2D Cerise-A.sln  Iris 2D Cherry.sln  LICENSE  README.md
Iris 2D Amethyst/: Log.txt  (+2 more)
Iris 2D Biscuit/Iris 2D Biscuit/: CMakeLists.txt
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D API Test/: CMakeLists.txt  Iris 2D Library.h  Iris2D.lib  main.cpp
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D API Test/hlsl/: TransitionEffectShader.hlsl
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D API Test/layout/: Layout.xml
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Onion(API)/: CMakeLists.txt
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Onion(API)/include/: Iris 2D Library.h  Iris2D.h  Iris2DSupports.h  stdafx.h
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Onion(API)/include/DirectX/: d3dx9.h
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Onion(API)/include/Encryption/: EncryptionDefines.h  GeneralEncriptyDefines.h  IrisGraphicsSourceExtract.h
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Onion(API)/include/Fmod Ex/: fmod.h
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Onion(API)/include/Iris 2D/: IrisApp.h  IrisBitmap.h  IrisColor.h  IrisEncripedResourceManager.h  IrisFont.h  IrisPlane.h  IrisRect.h  IrisShader.h  IrisSprite.h  IrisTilemap.h  IrisTone.h  IrisViewport.h  IrisWindow.h  ModuleIrisGraphics.h  ModuleIrisInput.h
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Onion(API)/include/LayoutXML/: mylayout.h
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Onion(API)/src/: Iris 2D Library.cpp  stdafx.cpp
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Onion(API)/src/Encryption/: LZSS.cpp
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Onion(API)/src/Iris 2D/: Iris2D.cpp  IrisApp.cpp  IrisBitmap.cpp  IrisEncripedResourceManager.cpp  IrisFont.cpp  IrisPlane.cpp  IrisRect.cpp  IrisShader.cpp  IrisSprite.cpp  IrisTilemap.cpp  IrisTone.cpp  IrisViewport.cpp  ModuleIrisGraphics.cpp  ModuleIrisInput.cpp
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Turkey(SC)/: CMakeLists.txt
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Turkey(SC)/hlsl/: SpriteShader.hlsl
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Turkey(SC)/include/: Iris2D.h  Iris2DSupports.h
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Turkey(SC)/include/Encryption/: EncryptionDefines.h  GeneralEncriptyDefines.h  GeneralEncriptySourceExtract.h
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Turkey(SC)/include/Iris 2D/: IrisApp.h  IrisBitmap.h  IrisColor.h  IrisD3DNamespace.h  IrisEncripedResourceManager.h  IrisError.h  IrisFont.h  IrisPlane.h  IrisRect.h  IrisShader.h  IrisSprite.h  IrisTilemap.h  IrisTone.h  IrisViewport.h  IrisWindow.h  ModuleIrisAudio.h  ModuleIrisGraphics.h  ModuleIrisInput.h  resource.h
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Turkey(SC)/include/LayoutXML/: XMLDefine.h
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Turkey(SC)/src/Encryption/: EncryptionFunction.cpp  GeneralEncriptySourceExtract.cpp  IrisGraphicsSourceExtract.cpp
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Turkey(SC)/src/Iris 2D/: D3D Init.cpp  IrisApp.cpp  IrisBitmap.cpp  IrisColor.cpp  IrisEncripedResourceManager.cpp  IrisFont.cpp  IrisPlane.cpp  IrisShader.cpp  IrisSprite.cpp  IrisViewport.cpp  IrisWindow.cpp  ModuleIrisAudio.cpp  ModuleIrisGraphics.cpp  ModuleIrisInput.cpp
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Turkey(SC)/src/XML Layout/: tinyxml.cpp
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Watermelon/: Iris 2D Biscuit-Onion(API).lib  IrisBitmapToScript.cpp  IrisBitmapToScript.h  IrisGraphicsModuleToScript.cpp  IrisGraphicsModuleToScript.h  IrisSpriteToScript.cpp  IrisSpriteToScript.h  main.cpp
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Watermelon/Release/Iris 2D .6E3680BF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Iris 2D Biscuit-Watermelon.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Watermelon/include/: Iris 2D Library.h
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Watermelon/include/Iris/: Iris.h  IrisInterpreter.h
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Watermelon/include/Iris/IrisComponents/: IrisParticularStatements.h  IrisStatement.h
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Watermelon/include/Iris/IrisNativeClasses/: IrisArray.h  IrisArrayTag.h  IrisClassBase.h  IrisClassBaseTag.h  IrisClosureBlockBaseTag.h  IrisFalseClass.h  IrisFloat.h  IrisFloatTag.h  IrisHash.h  IrisHashTag.h  IrisInteger.h  IrisIntegerTag.h  IrisInterfaceBaseTag.h  IrisMethodBase.h  IrisMethodBaseTag.h  IrisModuleBase.h  IrisModuleBaseTag.h  IrisNativeClasses.h  IrisNilClass.h  IrisObjectBase.h  IrisString.h
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Watermelon/include/Iris/IrisNativeModules/: IrisKernel.h
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Watermelon/script/: main.ir
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Watermelon/src/: main.cpp
Iris 2D Biscuit/Iris 2D Biscuit/Iris 2D Biscuit-Watermelon/src/Iris/: IrisInterpreter.cpp  main.cpp
Iris 2D Biscuit/Iris 2D Tools/: CMakeLists.txt
Iris 2D Biscuit/Iris 2D Tools/Iris 2D General Source Packer and Unpacker/: CMakeLists.txt
Iris 2D Biscuit/Iris 2D Tools/Iris 2D General Source Packer and Unpacker/include/: GeneralEncriptyDefines.h  GeneralEncriptyMaker.h  GeneralEncriptySourceExtract.h  GeneralEncriptyUnmaker.h
Iris 2D Biscuit/Iris 2D Tools/Iris 2D General Source Packer and Unpacker/src/: GeneralEncriptyMaker.cpp  GeneralEncriptySourceExtract.cpp  GeneralEncriptyUnmaker.cpp  GeneralFunction.cpp  main.cpp
Iris 2D Biscuit/Iris 2D Tools/Iris 2D Graphics Packer and Unpacker/: CMakeLists.txt
Iris 2D Biscuit/Iris 2D Tools/Iris 2D Graphics Packer and Unpacker/include/: IrisGraphicsPacker.h  IrisGraphicsSourceExtract.h  IrisGraphicsUnpacker.h  LZSS.h  defines.h
Iris 2D Biscuit/Iris 2D Tools/Iris 2D Graphics Packer and Unpacker/src/: IrisGraphicsPacker.cpp  IrisGraphicsSourceExtract.cpp  IrisGraphicsUnpacker.cpp  functions.cpp  main.cpp
(+1115 files in other folders)
