cmake_minimum_required(VERSION 3.10)
project(Iris2D_Cherry_Spinach)

set(CMAKE_CXX_STANDARD 11)

include_directories(include)
include_directories(api-wrapper)

if (APPLE)
	set(GLEW_H /usr/local/Cellar/glew/2.1.0/include/)
	set(GLFW_H /usr/local/Cellar/glfw/3.2.1/include/)
	set(GLM_H /usr/local/include/)
	include_directories(${GLEW_H} ${GLFW_H} ${GLM_H})
endif ()

if (WIN32)
	find_package(GLEW REQUIRED)
	find_package(glfw3 CONFIG REQUIRED)
	find_package(glm CONFIG REQUIRED)
	find_package(Freetype REQUIRED)

	SET(DIRECTX_DEPENDENCIES dxgi.lib; Windowscodecs.lib; d3d10_1.lib; d3d11.lib; d2d1.lib; dxguid.lib; D3DCompiler.lib; Winmm.lib; Dwrite.lib)

	FOREACH(LIB ${DIRECTX_DEPENDENCIES})
		FIND_LIBRARY(FOUND_LIB_${LIB} ${LIB})
		LIST(APPEND DIRECTX_DEPENDENCIES_FOUND ${FOUND_LIB_${LIB}})
		link_libraries(${FOUND_LIB_${LIB}})
	ENDFOREACH (LIB)

	if (${CMAKE_BUILD_TYPE} STREQUAL "RELEASE")
		FIND_LIBRARY(DIRECTXTEX_RELEASE
		NAMES
			DirectXTex.lib
		HINTS
			${CMAKE_FIND_ROOT_PATH}
		PATHS
			${CMAKE_FIND_ROOT_PATH}
		PATH_SUFFIXES
			"lib"
		)
		link_libraries(${DIRECTXTEX_RELEASE})

	elseif (${CMAKE_BUILD_TYPE} STREQUAL "DEBUG") 
		FIND_LIBRARY(DIRECTXTEX_DEBUG
		NAMES
			DirectXTex.lib
		HINTS
			${CMAKE_FIND_ROOT_PATH}
		PATHS
			${CMAKE_FIND_ROOT_PATH}
		PATH_SUFFIXES
			"debug/lib"
		) 

		link_libraries(${DIRECTXTEX_DEBUG})
	endif()

elseif (APPLE)
	set(GLEW_LINK /usr/local/Cellar/glew/2.1.0/lib/libGLEW.2.1.dylib)
	set(GLFW_LINK /usr/local/Cellar/glfw/3.2.1/lib/libglfw.3.dylib)
	link_libraries(${OPENGL} ${GLEW_LINK} ${GLFW_LINK})
endif ()

find_package(OpenGL REQUIRED)

aux_source_directory(./src DIR_SRCS_MAIN)
aux_source_directory(./src/OpenGL DIR_SRCS_MAIN_OPENGL)
aux_source_directory(./src/OpenGL/Iris2D DIR_SRCS_MAIN_OPENGL_IRIS2D)
aux_source_directory(./src/OpenGL/Iris2D/Sprites DIR_SRCS_MAIN_OPENGL_IRIS2D_SPRITE)
aux_source_directory(./src/OpenGL/Iris2D/Shaders DIR_SRCS_MAIN_OPENGL_IRIS2D_SHADER)
aux_source_directory(./src/OpenGL/Iris2D/Effects DIR_SRCS_MAIN_OPENGL_IRIS2D_EFFECT)
aux_source_directory(./src/OpenGL/OpenGLUtil DIR_SRCS_MAIN_OPENGL_UTIL)

aux_source_directory(./src/DirectX/Iris2D DIR_SRCS_MAIN_DIRECTX_IRIS2D)
aux_source_directory(./src/DirectX/Iris2D/Shaders DIR_SRCS_MAIN_DIRECTX_IRIS2D_SHADER)
aux_source_directory(./src/DirectX/Util DIR_SRCS_MAIN_DIRECTX_IRIS2D_UTIL)
aux_source_directory(./src/DirectX/DxUtil DIR_SRCS_MAIN_DIRECTX_DX_UTIL)

aux_source_directory(./src/Common/Iris2D DIR_SRCS_COMMON_IRIS2D)
aux_source_directory(./src/Common/Iris2D/Sprites DIR_SRCS_COMMON_IRIS2D_SPRITE)
aux_source_directory(./src/Common/Iris2D/Effects DIR_SRCS_COMMON_IRIS2D_EFFECT)
aux_source_directory(./src/Common/Iris2D/Animations DIR_SRCS_COMMON_IRIS2D_ANIMATION)
aux_source_directory(./src/Common/Iris2D/Animations/AnimationGroup DIR_SRCS_COMMON_IRIS2D_ANIMATION_GROUP)
aux_source_directory(./src/Common/Iris2D/Animations/AnimationProperty DIR_SRCS_COMMON_IRIS2D_ANIMATION_PROPERTY)
aux_source_directory(./src/Common/Util DIR_SRCS_COMMON_IRIS2D_UTIL)

aux_source_directory(./api-wrapper DIR_WRAPPER)

if (WIN32)
		add_library(libiris2d SHARED
		${DIR_WRAPPER}		
		${DIR_SRCS_MAIN_OPENGL}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_SPRITE}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_SHADER}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_EFFECT}
		${DIR_SRCS_MAIN_OPENGL_UTIL}
		
		${DIR_SRCS_MAIN_DIRECTX_IRIS2D}
		${DIR_SRCS_MAIN_DIRECTX_IRIS2D_SHADER}
		${DIR_SRCS_MAIN_DIRECTX_IRIS2D_UTIL}

		${DIR_SRCS_COMMON_IRIS2D}
		${DIR_SRCS_COMMON_IRIS2D_UTIL}
		${DIR_SRCS_COMMON_IRIS2D_SPRITE}
		${DIR_SRCS_COMMON_IRIS2D_EFFECT}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION_GROUP}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION_PROPERTY}

		${DIR_SRCS_MAIN_DIRECTX_DX_UTIL}
		)

		add_executable(main
		WIN32
		${DIR_SRCS_MAIN}
		
		${DIR_SRCS_MAIN_OPENGL}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_SPRITE}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_SHADER}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_EFFECT}
		${DIR_SRCS_MAIN_OPENGL_UTIL}
		
		${DIR_SRCS_MAIN_DIRECTX_IRIS2D}
		${DIR_SRCS_MAIN_DIRECTX_IRIS2D_SHADER}
		${DIR_SRCS_MAIN_DIRECTX_IRIS2D_UTIL}

		${DIR_SRCS_COMMON_IRIS2D}
		${DIR_SRCS_COMMON_IRIS2D_UTIL}
		${DIR_SRCS_COMMON_IRIS2D_SPRITE}
		${DIR_SRCS_COMMON_IRIS2D_EFFECT}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION_GROUP}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION_PROPERTY}

		${DIR_SRCS_MAIN_DIRECTX_DX_UTIL}
	  )
elseif (APPLE)
		add_executable(main
		${DIR_SRCS_MAIN}
		
		${DIR_SRCS_MAIN_OPENGL}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_SPRITE}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_SHADER}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_EFFECT}
		${DIR_SRCS_MAIN_OPENGL_UTIL}

		${DIR_SRCS_COMMON_IRIS2D}
		${DIR_SRCS_COMMON_IRIS2D_UTIL}
		${DIR_SRCS_COMMON_IRIS2D_SPRITE}
		${DIR_SRCS_COMMON_IRIS2D_EFFECT}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION_GROUP}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION_PROPERTY}

		${DIR_SRCS_MAIN_DIRECTX_DX_UTIL}
		)

	  add_library(libiris2d SHARED ${DIR_WRAPPER}
	  	${DIR_SRCS_MAIN}
		
		${DIR_SRCS_MAIN_OPENGL}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_SPRITE}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_SHADER}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_EFFECT}

		${DIR_SRCS_COMMON_IRIS2D_ANIMATION}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION_GROUP}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION_PROPERTY}

		${DIR_SRCS_MAIN_OPENGL_UTIL}

		${DIR_SRCS_COMMON_IRIS2D}
		${DIR_SRCS_COMMON_IRIS2D_UTIL}
		${DIR_SRCS_COMMON_IRIS2D_SPRITE}
		${DIR_SRCS_COMMON_IRIS2D_EFFECT}
		${DIR_SRCS_MAIN_DIRECTX_DX_UTIL}
		)
endif ()

if (WIN32)
	target_link_libraries(libiris2d PRIVATE ${OPENGL_LIBRARY} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} glfw GLEW::GLEW glm Freetype::Freetype)
	target_link_libraries(main PRIVATE ${OPENGL_LIBRARY} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} glfw GLEW::GLEW glm Freetype::Freetype)
elseif (APPLE)
	target_link_libraries(main PRIVATE ${OPENGL_LIBRARY} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY})
endif()
