cmake_minimum_required(VERSION 3.10)
project(Iris2D_Cherry_Spinach)

set(CMAKE_CXX_STANDARD 11)

include_directories(include)
include_directories(api-wrapper)

find_package(GLEW REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(Freetype REQUIRED)

if (WIN32)
	find_package(glfw3 CONFIG REQUIRED)
	SET(DIRECTX_DEPENDENCIES dxgi.lib; Windowscodecs.lib; d3d10_1.lib; d3d11.lib; d2d1.lib; dxguid.lib; D3DCompiler.lib; Winmm.lib; Dwrite.lib)

	FOREACH(LIB ${DIRECTX_DEPENDENCIES})
		FIND_LIBRARY(FOUND_LIB_${LIB} ${LIB})
		link_libraries(${FOUND_LIB_${LIB}})
	ENDFOREACH (LIB)

	if (${CMAKE_BUILD_TYPE} STREQUAL "RELEASE")
		link_libraries(${CMAKE_FIND_ROOT_PATH}/lib/DirectXTex.lib)
	elseif (${CMAKE_BUILD_TYPE} STREQUAL "DEBUG")
		link_libraries(${CMAKE_FIND_ROOT_PATH}/debug/lib/DirectXTex.lib)
	endif()
elseif (APPLE)
	include_directories(/usr/local/include)
	set(GLFW_LIB /usr/local/lib/libglfw.dylib)
	find_package(harfbuzz CONFIG REQUIRED)
	link_libraries(${OPENGL} ${GLFW_LIB})
endif ()

find_package(OpenGL REQUIRED)

aux_source_directory(./src DIR_SRCS_MAIN)
aux_source_directory(./src/OpenGL DIR_SRCS_MAIN_OPENGL)
aux_source_directory(./src/OpenGL/Iris2D DIR_SRCS_MAIN_OPENGL_IRIS2D)
aux_source_directory(./src/OpenGL/Iris2D/Sprites DIR_SRCS_MAIN_OPENGL_IRIS2D_SPRITE)
aux_source_directory(./src/OpenGL/Iris2D/Shaders DIR_SRCS_MAIN_OPENGL_IRIS2D_SHADER)
aux_source_directory(./src/OpenGL/Iris2D/Effects DIR_SRCS_MAIN_OPENGL_IRIS2D_EFFECT)
aux_source_directory(./src/OpenGL/OpenGLUtil DIR_SRCS_MAIN_OPENGL_UTIL)

if (WIN32)
	aux_source_directory(./src/DirectX/Iris2D DIR_SRCS_MAIN_DIRECTX_IRIS2D)
	aux_source_directory(./src/DirectX/Iris2D/Shaders DIR_SRCS_MAIN_DIRECTX_IRIS2D_SHADER)
	aux_source_directory(./src/DirectX/Util DIR_SRCS_MAIN_DIRECTX_IRIS2D_UTIL)
	aux_source_directory(./src/DirectX/DxUtil DIR_SRCS_MAIN_DIRECTX_DX_UTIL)
endif()

aux_source_directory(./src/Common/Iris2D DIR_SRCS_COMMON_IRIS2D)
aux_source_directory(./src/Common/Iris2D/Sprites DIR_SRCS_COMMON_IRIS2D_SPRITE)
aux_source_directory(./src/Common/Iris2D/Effects DIR_SRCS_COMMON_IRIS2D_EFFECT)
aux_source_directory(./src/Common/Iris2D/Animations DIR_SRCS_COMMON_IRIS2D_ANIMATION)
aux_source_directory(./src/Common/Iris2D/Animations/AnimationGroup DIR_SRCS_COMMON_IRIS2D_ANIMATION_GROUP)
aux_source_directory(./src/Common/Iris2D/Animations/AnimationProperty DIR_SRCS_COMMON_IRIS2D_ANIMATION_PROPERTY)
aux_source_directory(./src/Common/Util DIR_SRCS_COMMON_IRIS2D_UTIL)

aux_source_directory(./api-wrapper DIR_WRAPPER)

aux_source_directory(./test DIR_TEST)

if (WIN32)
		add_library(libiris2d SHARED
		${DIR_WRAPPER}		
		${DIR_SRCS_MAIN_OPENGL}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_SPRITE}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_SHADER}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_EFFECT}
		${DIR_SRCS_MAIN_OPENGL_UTIL}
		
		${DIR_SRCS_MAIN_DIRECTX_IRIS2D}
		${DIR_SRCS_MAIN_DIRECTX_IRIS2D_SHADER}
		${DIR_SRCS_MAIN_DIRECTX_IRIS2D_UTIL}

		${DIR_SRCS_COMMON_IRIS2D}
		${DIR_SRCS_COMMON_IRIS2D_UTIL}
		${DIR_SRCS_COMMON_IRIS2D_SPRITE}
		${DIR_SRCS_COMMON_IRIS2D_EFFECT}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION_GROUP}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION_PROPERTY}

		${DIR_SRCS_MAIN_DIRECTX_DX_UTIL}
		)

		add_executable(test
		WIN32
		${DIR_SRCS_MAIN_OPENGL}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_SPRITE}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_SHADER}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_EFFECT}
		${DIR_SRCS_MAIN_OPENGL_UTIL}
		
		${DIR_SRCS_MAIN_DIRECTX_IRIS2D}
		${DIR_SRCS_MAIN_DIRECTX_IRIS2D_SHADER}
		${DIR_SRCS_MAIN_DIRECTX_IRIS2D_UTIL}

		${DIR_SRCS_COMMON_IRIS2D}
		${DIR_SRCS_COMMON_IRIS2D_UTIL}
		${DIR_SRCS_COMMON_IRIS2D_SPRITE}
		${DIR_SRCS_COMMON_IRIS2D_EFFECT}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION_GROUP}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION_PROPERTY}

		${DIR_SRCS_MAIN_DIRECTX_DX_UTIL}
		
		${DIR_TEST}
		)

		add_executable(main
		WIN32
		${DIR_SRCS_MAIN}
		
		${DIR_SRCS_MAIN_OPENGL}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_SPRITE}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_SHADER}
		${DIR_SRCS_MAIN_OPENGL_IRIS2D_EFFECT}
		${DIR_SRCS_MAIN_OPENGL_UTIL}
		
		${DIR_SRCS_MAIN_DIRECTX_IRIS2D}
		${DIR_SRCS_MAIN_DIRECTX_IRIS2D_SHADER}
		${DIR_SRCS_MAIN_DIRECTX_IRIS2D_UTIL}

		${DIR_SRCS_COMMON_IRIS2D}
		${DIR_SRCS_COMMON_IRIS2D_UTIL}
		${DIR_SRCS_COMMON_IRIS2D_SPRITE}
		${DIR_SRCS_COMMON_IRIS2D_EFFECT}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION_GROUP}
		${DIR_SRCS_COMMON_IRIS2D_ANIMATION_PROPERTY}

		${DIR_SRCS_MAIN_DIRECTX_DX_UTIL}
	  )
elseif (APPLE)
	add_library(libiris2d SHARED
			${DIR_WRAPPER}
			${DIR_SRCS_MAIN_OPENGL}
			${DIR_SRCS_MAIN_OPENGL_IRIS2D}
			${DIR_SRCS_MAIN_OPENGL_IRIS2D_SPRITE}
			${DIR_SRCS_MAIN_OPENGL_IRIS2D_SHADER}
			${DIR_SRCS_MAIN_OPENGL_IRIS2D_EFFECT}
			${DIR_SRCS_MAIN_OPENGL_UTIL}

			${DIR_SRCS_COMMON_IRIS2D}
			${DIR_SRCS_COMMON_IRIS2D_UTIL}
			${DIR_SRCS_COMMON_IRIS2D_SPRITE}
			${DIR_SRCS_COMMON_IRIS2D_EFFECT}
			${DIR_SRCS_COMMON_IRIS2D_ANIMATION}
			${DIR_SRCS_COMMON_IRIS2D_ANIMATION_GROUP}
			${DIR_SRCS_COMMON_IRIS2D_ANIMATION_PROPERTY}
			)

	add_executable(test
			${DIR_SRCS_MAIN_OPENGL}
			${DIR_SRCS_MAIN_OPENGL_IRIS2D}
			${DIR_SRCS_MAIN_OPENGL_IRIS2D_SPRITE}
			${DIR_SRCS_MAIN_OPENGL_IRIS2D_SHADER}
			${DIR_SRCS_MAIN_OPENGL_IRIS2D_EFFECT}
			${DIR_SRCS_MAIN_OPENGL_UTIL}

			${DIR_SRCS_COMMON_IRIS2D}
			${DIR_SRCS_COMMON_IRIS2D_UTIL}
			${DIR_SRCS_COMMON_IRIS2D_SPRITE}
			${DIR_SRCS_COMMON_IRIS2D_EFFECT}
			${DIR_SRCS_COMMON_IRIS2D_ANIMATION}
			${DIR_SRCS_COMMON_IRIS2D_ANIMATION_GROUP}
			${DIR_SRCS_COMMON_IRIS2D_ANIMATION_PROPERTY}

			${DIR_TEST}
			)

	add_executable(main
			${DIR_SRCS_MAIN}

			${DIR_SRCS_MAIN_OPENGL}
			${DIR_SRCS_MAIN_OPENGL_IRIS2D}
			${DIR_SRCS_MAIN_OPENGL_IRIS2D_SPRITE}
			${DIR_SRCS_MAIN_OPENGL_IRIS2D_SHADER}
			${DIR_SRCS_MAIN_OPENGL_IRIS2D_EFFECT}
			${DIR_SRCS_MAIN_OPENGL_UTIL}

			${DIR_SRCS_COMMON_IRIS2D}
			${DIR_SRCS_COMMON_IRIS2D_UTIL}
			${DIR_SRCS_COMMON_IRIS2D_SPRITE}
			${DIR_SRCS_COMMON_IRIS2D_EFFECT}
			${DIR_SRCS_COMMON_IRIS2D_ANIMATION}
			${DIR_SRCS_COMMON_IRIS2D_ANIMATION_GROUP}
			${DIR_SRCS_COMMON_IRIS2D_ANIMATION_PROPERTY}
			)
endif ()

if (WIN32)
	target_link_libraries(libiris2d PRIVATE ${OPENGL_LIBRARY} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} glfw GLEW::GLEW glm Freetype::Freetype)
	target_link_libraries(main PRIVATE ${OPENGL_LIBRARY} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} glfw GLEW::GLEW glm Freetype::Freetype)
	target_link_libraries(test PRIVATE ${OPENGL_LIBRARY} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} glfw GLEW::GLEW glm Freetype::Freetype)
elseif (APPLE)
	target_link_libraries(libiris2d PRIVATE ${OPENGL_LIBRARY} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY}  GLEW::GLEW glm Freetype::Freetype harfbuzz::harfbuzz)
	target_link_libraries(main PRIVATE ${OPENGL_LIBRARY} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY}  GLEW::GLEW glm Freetype::Freetype harfbuzz::harfbuzz)
	target_link_libraries(test PRIVATE ${OPENGL_LIBRARY} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY}  GLEW::GLEW glm Freetype::Freetype harfbuzz::harfbuzz)
endif()